# SentinelNet

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  INTEGRATIONS-IDEAS.md  README.md  ai_assistant.py  app_server.py  app_server_clean.py  app_server_fastapi.py  arp_collector.py  ask_claude.py  claude_plan.md  config_analyzer.py  core_engine.py  crypto_vault.py  data_config.py  db.py  destructure.diff  docker-compose.yml  fix_ui_tests2.py  fortigate_provisioner.py  fortigate_service.py  identity_manager.py  inventory_manager.py  mac_collector.py  mac_history.py  main.py  mcp_client.py  mcp_server.py  network_scanner.py  provisioning_secrets.py  pyproject.toml  redaction.py  report.md  requirements.txt  secure_key_store.py  security_manager.py  sentinelnetfixes.patch  site_agent.py  (+32 more)
.agents/: AGENTS.md
ai/: ai_assistant.py  config_analyzer.py  mcp_server.py
collectors/: arp_collector.py  mac_collector.py  mac_history.py  network_scanner.py
core/: app_settings.py  core_engine.py  data_config.py  db.py
data/: identities.json  observability.db  vendors.json
docs/: APP_STATE_REPORT.md  GAP-ANALYSIS-ROADMAP.md  HARDENING.md  IMPLEMENTATION-COMPLETE-GUIDE.md  MASTER-IMPLEMENTATION-PLAN.draft-opus.md  MASTER-IMPLEMENTATION-PLAN.md  REFACTOR-DESTRUCTURE.md  REFACTOR.md  REMOTE-SITES.md  SECURITY-AUDIT.md  remote_site_summary.md
drivers/: __init__.py  aruba_os.py  base_driver.py  cisco_cbs.py  cisco_ios.py  cisco_wlc.py  fortinet.py  hp_procurve.py  juniper_junos.py  paloalto_panos.py
fw_analyzers/: __init__.py  _ip.py  fortios.py  panos.py
routers/: ai.py  (+21 more)
(+108 files in other folders)
